--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="hats">
                     <div class="header">Hats</div>
                     <div class="items">
-                        <div class="item" onclick="changeItem('hat', '')">None</div>
+                        <div id="cancel" class="item" onclick="changeItem('hat', '')"><img src="./icons/cancel-icon.svg" alt=""></div>
                         <div class="item" onclick="changeItem('hat', './images/Fashion_hood.png')"><img src="./images/Fashion_hood.png" alt="Hat 1"></div>
                         <div class="item" onclick="changeItem('hat', './images/Gold_hat.png')"><img src="./images/Gold_hat.png" alt="Hat 2"></div>
                         <div class="item" onclick="changeItem('hat', './images/Lab_hat.png')"><img src="./images/Lab_hat.png" alt="Hat 3"></div>
@@ -85,7 +85,7 @@
                 <div class="body">
                     <div class="header">Body</div>
                     <div class="items">
-                        <div class="item" onclick="changeItem('body', '')">None</div>
+                        <div id="cancel" class="item" onclick="changeItem('body', '')"><img src="./icons/cancel-icon.svg" alt=""></div>
                         <div class="item" onclick="changeItem('body', './images/Fashion_Jacket.png')"><img src="./images/Fashion_Jacket.png" alt="Body 1"></div>
                         <div class="item" onclick="changeItem('body', './images/Lab_uniform.png')"><img src="./images/Lab_uniform.png" alt="Body 2"></div>
                         <div class="item" onclick="changeItem('body', './images/Play_tshirt.png')"><img src="./images/Play_tshirt.png" alt="Body 3"></div>
@@ -94,14 +94,14 @@
                 <div class="bottom">
                     <div class="header">Bottom</div>
                     <div class="items">
-                        <div class="item" onclick="changeItem('bottom', '')">None</div>
+                        <div id="cancel" class="item" onclick="changeItem('bottom', '')"><img src="./icons/cancel-icon.svg" alt=""></div>
                         <div class="item" onclick="changeItem('bottom', './images/Fashion_boots.png')"><img src="./images/Fashion_boots.png" alt="Bottom 1"></div>
                     </div>
                 </div>
                 <div class="accessories-left">
                     <div class="header">Accessories Left Hand</div>
                     <div class="items">
-                        <div class="item" onclick="changeItem('accessories-left', '')">None</div>
+                        <div id="cancel" class="item" onclick="changeItem('accessories-left', '')"><img src="./icons/cancel-icon.svg" alt=""></div>
                         <div class="item" onclick="changeItem('accessories-left', './images/Throne_orb.png')"><img src="./images/Throne_orb.png" alt="Accessory 1"></div>
                         <div class="item" onclick="changeItem('accessories-left', './images/Lab_bottle.png')"><img src="./images/Lab_bottle.png" alt="Accessory 2"></div>
                     </div>
@@ -109,7 +109,7 @@
                 <div class="accessories-right">
                     <div class="header">Accessories right hand</div>
                     <div class="items">
-                        <div class="item" onclick="changeItem('accessories-right', '')">None</div>
+                        <div id="cancel" class="item" onclick="changeItem('accessories-right', '')"><img src="./icons/cancel-icon.svg" alt=""></div>
                         <div class="item" onclick="changeItem('accessories-right', './images/Lab_ziplock.png')"><img src="./images/Lab_ziplock.png" alt="Accessory 1"></div>
                         <div class="item" onclick="changeItem('accessories-right', './images/Play_candy.png')"><img src="./images/Play_candy.png" alt="Accessory 2"></div>
                         <div class="item" onclick="changeItem('accessories-right', './images/Gold_cane.png')"><img src="./images/Gold_cane.png" alt="Accessory 3"></div>
@@ -119,7 +119,7 @@
                 <div class="glasses">
                     <div class="header">Glasses</div>
                     <div class="items">
-                        <div class="item" onclick="changeItem('glasses', '')">None</div>
+                        <div id="cancel" class="item" onclick="changeItem('glasses', '')"><img src="./icons/cancel-icon.svg" alt=""></div>
                         <div class="item" onclick="changeItem('glasses', './images/Gold_glasses.png')"><img src="./images/Gold_glasses.png" alt="Glasses 1"></div>
                         <div class="item" onclick="changeItem('glasses', './images/Lab_glasses.png')"><img src="./images/Lab_glasses.png" alt="Glasses 1"></div>
                     </div>
@@ -127,7 +127,7 @@
                 <div class="background">
                     <div class="header">Background</div>
                     <div class="items">
-                        <div class="item" onclick="changeItem('background', '')">None</div>
+                        <div id="cancel" class="item" onclick="changeItem('background', '')"><img src="./icons/cancel-icon.svg" alt=""></div>
                         <div class="item" onclick="changeItem('background', './images/Fashion.png')"><img src="./images/Fashion.png" alt="Background 1"></div>
                         <div class="item" onclick="changeItem('background', './images/Gold.png')"><img src="./images/Gold.png" alt="Background 2"></div>
                         <div class="item" onclick="changeItem('background', './images/Lab.png')"><img src="./images/Lab.png" alt="Background 3"></div>
@@ -138,7 +138,6 @@
             </div>
         </div> 
     </section>
-    <div class="screenshot-result"></div>
     <section class="images">
         <ul class="images-menu">
             <li class="image reveal first"><img src="./images/Fashion-set.png" alt=""></li>
