--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Coiny&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/index.css">
     <link rel="stylesheet" href="./styles/media.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -20,27 +18,11 @@
     <section class="first-screen">
         <div class="first-screen-container">
             <header class="header">
-                <h1>$Lorem</h1>
+                <h1>$HELLOMF</h1>
                 <p>CA: Lorem, ipsum dolor.</p>
             </header>
-            <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" ride="false">
-                <div class="carousel-inner">
-                    <div class="carousel-item first active">
-                      <img src="./images/Fashion-set.png" alt="First slide">
-                    </div>
-                    <div class="carousel-item">
-                      <img src="./images/BreakingBad.png" alt="Second slide">
-                    </div>
-                    <div class="carousel-item">
-                      <img src="./images/Kid.png" alt="Third slide">
-                    </div>
-                    <div class="carousel-item">
-                      <img src="images/King.png" alt="Third slide">
-                    </div>
-                    <div class="carousel-item last">
-                      <img src="./images/Skrudj.png" alt="Third slide">
-                    </div>
-                  </div>
+            <div class="gif">
+                <img src="./images/hellomf_gif.gif" alt="">
             </div>
             <div class="socials">
                 <div class="links">
@@ -176,7 +158,7 @@
     </section>
     <footer class="footer">
         <div class="footer-rights">
-            © 2024 by Twitch Cat. All rights reserved!
+            © 2024 by HelloMF. All rights reserved!
         </div>
     </footer>
     <script src="./scripts/changeItems.js"></script>
